<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button1"
            android:layout_width="dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sampel"
            android:text="@string/button1" />

        <Button
            android:id="@+id/buttongps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sampel"
            android:text="@string/gps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:background="@drawable/sampel"
            
            android:text="@string/map" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:background="@drawable/sampel"
            
            android:text="Button" />
    </LinearLayout>

    <Button
        android:id="@+id/buttontwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter" />

    <Button
        android:id="@+id/buttonnotifmanager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notif" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/email"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttongridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridview" />

        <Button
            android:id="@+id/button_web_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_view" />

    </LinearLayout>

</LinearLayout>